# fastapi-pyinstaller

./: LICENSE  README.md  build.sh  pyproject.toml  start-fractal-server.py
hooks/: hook-fastapi_bin.py
src/fastapi_bin/: __init__.py  main.py
